// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`it fails properly when it times out without expectation passing 1`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32m2000[39m
Received:
  [31m200[39m]
`;

exports[`it fails properly with jest error message when it times out without expectation passing 1`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32m2000[39m
Received:
  [31m200[39m]
`;

exports[`it fails when the change didn't happen fast enough, based on the waitForExpect timeout 1`] = `
[Error: [2mexpect([22m[31mreceived[39m[2m).toEqual([22m[32mexpected[39m[2m)[22m

Expected value to equal:
  [32m3000[39m
Received:
  [31m300[39m]
`;
